shared_sources = files([
  'retro-controller-codes.c',
  'retro-controller-type.c',
  'retro-input.c',
  'retro-memfd.c',
  'retro-memory-type.c',
  'retro-pixel-format.c',
  'retro-rumble-effect.c',
])

shared_headers = files([
  'retro-controller-codes.h',
  'retro-controller-type.h',
  'retro-input.h',
  'retro-memory-type.h',
  'retro-rumble-effect.h',
])
